--- a/dgl/Advanced Materials.ipynb
+++ b/dgl/Advanced Materials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,10 @@
     "os.environ['TORCH'] = torch.__version__\n",
     "os.environ['DGLBACKEND'] = \"pytorch\"\n",
     "import dgl\n",
-    "import dgl.graphbolt as gb"
+    "import dgl.graphbolt as gb\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "device = torch.device(\"cpu\")"
    ]
   },
   {
