load dataset to progect

--- a/dgl/Advanced Materials.ipynb
+++ b/dgl/Advanced Materials.ipynb
@@ -34,6 +34,29 @@
    "source": [
     "dataset = gb.BuiltinDataset(\"ogbn-arxiv\").load()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset consists of graph, feature and tasks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = dataset.graph\n",
+    "feature = dataset.feature\n",
+    "train_set = dataset.tasks[0].train_set\n",
+    "valid_set = dataset.tasks[0].validation_set\n",
+    "test_set = dataset.tasks[0].test_set\n",
+    "task_name = dataset.tasks[0].metadata[\"name\"]\n",
+    "num_classes = dataset.tasks[0].metadata[\"num_classes\"]\n",
+    "print(f\"Task: {task_name}. Number of classes: {num_classes}\")"
+   ]
   }
  ],
  "metadata": {
