add link prdiction file and loadin g data

--- a/dgl/Advanced Materials.ipynb
+++ b/dgl/Advanced Materials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,43 +116,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MiniBatch(seeds=tensor([124023,  46807,  54874,  ..., 145854, 125684,  49347]),\n",
-      "          sampled_subgraphs=[SampledSubgraphImpl(sampled_csc=CSCFormatBase(indptr=tensor([    0,     4,     8,  ..., 14676, 14680, 14684], dtype=torch.int32),\n",
-      "                                                                         indices=tensor([   0, 1024, 3871,  ..., 7848, 3870, 4319], dtype=torch.int32),\n",
+      "MiniBatch(seeds=tensor([ 49261,  51944, 111496,  ..., 133230, 136307, 163015]),\n",
+      "          sampled_subgraphs=[SampledSubgraphImpl(sampled_csc=CSCFormatBase(indptr=tensor([    0,     4,     8,  ..., 14877, 14881, 14885], dtype=torch.int32),\n",
+      "                                                                         indices=tensor([ 1024,  1026,  1025,  ...,  1023, 12086,  3897], dtype=torch.int32),\n",
       "                                                           ),\n",
-      "                                               original_row_node_ids=tensor([124023,  46807,  54874,  ..., 162909, 129411,  65153]),\n",
-      "                                               original_edge_ids=tensor([2439621, 2273367,  853857,  ...,  541096, 2316641, 2139748]),\n",
-      "                                               original_column_node_ids=tensor([124023,  46807,  54874,  ...,  58554,   6358,   1043]),\n",
+      "                                               original_row_node_ids=tensor([ 49261,  51944, 111496,  ..., 113926, 165359, 151096]),\n",
+      "                                               original_edge_ids=tensor([ 673922, 1328739, 2172331,  ..., 2225270, 2068343,  911667]),\n",
+      "                                               original_column_node_ids=tensor([ 49261,  51944, 111496,  ...,  66644, 127174, 166823]),\n",
       "                            ),\n",
-      "                            SampledSubgraphImpl(sampled_csc=CSCFormatBase(indptr=tensor([   0,    4,    8,  ..., 3634, 3638, 3642], dtype=torch.int32),\n",
-      "                                                                         indices=tensor([1024,    0, 1025,  ..., 3868, 3869, 3870], dtype=torch.int32),\n",
+      "                            SampledSubgraphImpl(sampled_csc=CSCFormatBase(indptr=tensor([   0,    4,    8,  ..., 3664, 3668, 3672], dtype=torch.int32),\n",
+      "                                                                         indices=tensor([1024, 1025, 1026,  ..., 3898, 3899, 1023], dtype=torch.int32),\n",
       "                                                           ),\n",
-      "                                               original_row_node_ids=tensor([124023,  46807,  54874,  ...,  58554,   6358,   1043]),\n",
-      "                                               original_edge_ids=tensor([2273367, 2439621, 2165767,  ...,  802013,   91311,   12980]),\n",
-      "                                               original_column_node_ids=tensor([124023,  46807,  54874,  ..., 145854, 125684,  49347]),\n",
+      "                                               original_row_node_ids=tensor([ 49261,  51944, 111496,  ...,  66644, 127174, 166823]),\n",
+      "                                               original_edge_ids=tensor([ 673922, 2172331, 1328739,  ..., 1758234, 2283729, 2478613]),\n",
+      "                                               original_column_node_ids=tensor([ 49261,  51944, 111496,  ..., 133230, 136307, 163015]),\n",
       "                            )],\n",
-      "          node_features={'feat': tensor([[-0.0883, -0.1481, -0.1361,  ...,  0.2523, -0.0551, -0.0215],\n",
-      "                                [-0.0645,  0.0598, -0.1087,  ...,  0.1092, -0.0709,  0.0601],\n",
-      "                                [ 0.0651, -0.0046, -0.2526,  ..., -0.0309,  0.1373, -0.0006],\n",
+      "          node_features={'feat': tensor([[ 0.0052,  0.2911, -0.3137,  ...,  0.0725, -0.1455, -0.2277],\n",
+      "                                [-0.2805,  0.1078, -0.3903,  ...,  0.0562, -0.3462, -0.0785],\n",
+      "                                [-0.1151,  0.0973, -0.2473,  ...,  0.1274, -0.0928, -0.2198],\n",
       "                                ...,\n",
-      "                                [-0.0738, -0.0712, -0.2459,  ...,  0.1259,  0.0026, -0.1784],\n",
-      "                                [ 0.0021,  0.0805, -0.2701,  ...,  0.0305, -0.0858, -0.1369],\n",
-      "                                [ 0.0865,  0.0255, -0.3387,  ...,  0.2130, -0.0082, -0.1046]])},\n",
-      "          labels=tensor([ 2,  2, 27,  ..., 19,  4, 34]),\n",
-      "          input_nodes=tensor([124023,  46807,  54874,  ..., 162909, 129411,  65153]),\n",
+      "                                [-0.2927, -0.0705, -0.2954,  ...,  0.0875, -0.0538, -0.2240],\n",
+      "                                [-0.1311,  0.0356, -0.3157,  ...,  0.1401, -0.1457, -0.1777],\n",
+      "                                [-0.0845, -0.0739, -0.2923,  ...,  0.1349, -0.2195, -0.1625]])},\n",
+      "          labels=tensor([20, 24, 28,  ..., 28, 27, 24]),\n",
+      "          input_nodes=tensor([ 49261,  51944, 111496,  ..., 113926, 165359, 151096]),\n",
       "          indexes=None,\n",
       "          edge_features=[{},\n",
       "                        {}],\n",
       "          compacted_seeds=None,\n",
-      "          blocks=[Block(num_src_nodes=11697, num_dst_nodes=3871, num_edges=14684),\n",
-      "                 Block(num_src_nodes=3871, num_dst_nodes=1024, num_edges=3642)],\n",
+      "          blocks=[Block(num_src_nodes=12087, num_dst_nodes=3900, num_edges=14885),\n",
+      "                 Block(num_src_nodes=3900, num_dst_nodes=1024, num_edges=3672)],\n",
       "       )\n"
      ]
     }
@@ -171,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input nodes tensor([124023,  46807,  54874,  ..., 162909, 129411,  65153]). \n"
+      "Input nodes tensor([ 49261,  51944, 111496,  ..., 113926, 165359, 151096]). \n"
      ]
     }
    ],
@@ -197,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,6 +327,27 @@
     "    \n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Link Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
